--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -12,19 +12,25 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
-      <nav>
-        <img src="./img/logo.png" alt="Logo image" />
-        <ul>
-          <li><a href="#home">HOME</a></li>
-          <li><a href="#about">ABOUT</a></li>
-          <li><a href="#work">WORK</a></li>
-          <li><a href="#contact">CONTACT</a></li>
-        </ul>
+      <nav class="navbar">
+        <div class="brand-title">TM</div>
+        <a href="#" class="toggle-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+          <ul>
+            <li><a href="#home">HOME</a></li>
+            <li><a href="#about">ABOUT</a></li>
+            <li><a href="#work">WORK</a></li>
+            <li><a href="#contact">CONTACT</a></li>
+          </ul>
+        </div>
       </nav>
       <section id="home">
         <h2>HELLO THERE</h2>
@@ -43,7 +49,7 @@
     </header>
     <main>
       <section id="about">
-        <h3>ABOUT</h2>
+        <h3>ABOUT</h3>
         <h2>Personal</h2>
       </section>
       <section id="work"></section>
