--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -33,8 +33,11 @@
         </div>
       </nav>
       <section id="home">
-        <h2>HELLO THERE</h2>
-        <div>
+        <div class="greeting">
+          <div class="line"></div>
+          <h2>HELLO THERE</h2>
+        </div>
+        <div class="lead">
           <div class="left">
             <h1>I am Toni Morović.</h1>
             <h1>I am a Frontend Web Developer</h1>
