--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -58,6 +58,6 @@
       <section id="work"></section>
     </main>
     <footer></footer>
-    <script src="./app.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
