--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -40,7 +40,7 @@
         <div class="lead">
           <div class="left">
             <h1>I am Toni Morović.</h1>
-            <h1>I am a Frontend Web Developer</h1>
+            <h1>I am a Web Developer</h1>
           </div>
           <div class="right">
             <a href="#work">PROJECTS</a>
@@ -53,9 +53,68 @@
     <main>
       <section id="about">
         <h3>ABOUT</h3>
-        <h2>Personal</h2>
+        <h2>Personal Info</h2>
+        <div class="lead">
+          <div class="left">
+            <h4>About me</h4>
+            <p>
+              My name is Toni Morović and I'm a passionate Frontend Web
+              Developer. Skilled in HTML, CSS, Javascript and React, also
+              learned Backend technologies to get a broader look of how complete
+              Web Development works.
+            </p>
+            <br />
+            <p>
+              I love to explore and learn new technologies, so whether you have
+              an exciting project that i could contribute to, job opportunity or
+              just chat about tech. Feel free to contact me.
+            </p>
+          </div>
+          <div class="right">
+            <h4>Skills</h4>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JAVASCRIPT</li>
+              <li>BOOTSTRAP</li>
+              <li>REACT</li>
+              <li>GIT</li>
+            </ul>
+          </div>
+        </div>
       </section>
-      <section id="work"></section>
+      <section id="work">
+        <div class="work-inner">
+          <h3>WORK</h3>
+          <h2>Latest Projects</h2>
+          <div class="grid">
+            <div>
+              <img src="" alt="" />
+              <h4></h4>
+              <p></p>
+              <a href=""></a>
+            </div>
+            <div>
+              <img src="" alt="" />
+              <h4></h4>
+              <p></p>
+              <a href=""></a>
+            </div>
+            <div>
+              <img src="" alt="" />
+              <h4></h4>
+              <p></p>
+              <a href=""></a>
+            </div>
+            <div>
+              <img src="" alt="" />
+              <h4></h4>
+              <p></p>
+              <a href=""></a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
     <script src="./js/app.js"></script>
