--- a/expensetrackerapp/public/index.html
+++ b/expensetrackerapp/public/index.html
@@ -18,7 +18,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Expense Tracker</title>
   </head>
   <body>
     <noscript>
